# DIP_1_2

./: CMakeLists.txt  ImgPcAlg.cpp  ImgPcAlg.h  ImgPcAlg_2.cpp  mainwindow.cpp  mainwindow.h  roi.cpp  roi.h  task.cpp  task.h
